--- a/neuron-base.html
+++ b/neuron-base.html
@@ -66,7 +66,8 @@ DiyaBehaviors.Neuron = {
 
 	send: function (neuronId, val) {
 		this.neuronValues[neuronId] = val;
-		this.neuron.writeAll(this.neuronValues);
+		if (this.neuron)
+			this.neuron.writeAll(this.neuronValues);
 	},
 
 	sendEvent: function (neuronId, period) {
